--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
   - "2.7"
-  - "3.5"
+  # - "3.5"
   - "3.6"
 install:
   - sudo apt-get update
@@ -17,6 +17,7 @@ install:
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
+  - conda config -add channels conda-forge
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
