--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: python
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
   - "2.7"
-  # - "3.5"
   - "3.6"
 install:
   - sudo apt-get update
@@ -25,8 +24,9 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION tomopy
   - source activate test-environment
-  - python setup.py install
 
 script:
   # Your test script goes here
   - python fluorescenceSelfAbsorption.py
+
+# add [skip travis] to commit message to skip travis build
