Added unittest framework (updated travis), updated scan class

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ install:
 
 script:
   # Your test script goes here
-  - python fluorescenceSelfAbsorption.py
+  - python -m unittest test
+  # - python fluorescenceSelfAbsorption.py
 
 # add [skip travis] to commit message to skip travis build
