--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,13 @@ install:
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
-  - conda config --add channels conda-forge
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION tomopy opencv coveralls
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION opencv coveralls
+  - conda install -c conda-forge tomopy
   - source activate test-environment
 
 script:
